# Netscore

./: .gitignore  README.md  big_red.json  small_green_red.json  small_red_blue.json
software/Netscore/main/: CMakeLists.txt  definitions.cpp  definitions.h  main.cpp  misc.cpp  misc.h  score_board.cpp  score_board.h  tasks.cpp  tasks.h
software/Netscore/main/button/: button_actions.cpp  button_actions.h  input.h
software/Netscore/main/buzzer/: buzzer.cpp  buzzer.h
software/Netscore/main/display/: display.cpp  display.h  display_api.cpp  display_api.h  display_definitions.cpp  display_helper.cpp  display_helper.h  display_init.cpp  display_init.h
software/Netscore/main/display/tlc5940/: tlc5940.cpp
software/Netscore/main/wifi/: esp-now.cpp  esp-now.h
software/v1.0/main-unit/main/: CMakeLists.txt  definitions.cpp  definitions.h  main.cpp  misc.cpp  misc.h  score_board.cpp  score_board.h  storage.h  tasks.cpp  tasks.h
software/v1.0/main-unit/main/button/: button_actions.cpp  button_actions.h  button_actions_helper.cpp  button_actions_helper.h  input.cpp  input.h
software/v1.0/main-unit/main/buzzer/: buzzer.cpp  buzzer.h
software/v1.0/main-unit/main/display/: display.cpp  display.h  display_api.cpp  display_api.h  display_definitions.cpp  display_definitions.h  display_init.cpp  display_init.h
software/v1.0/main-unit/main/spi/: spi.cpp  spi.h
software/v1.0/main-unit/main/wifi/: esp-now.cpp  esp-now.h
software/v3.0/main-unit/main/: CMakeLists.txt  battery.cpp  battery.h  definitions.cpp  definitions.h  main.cpp  misc.cpp  misc.h  nvs_store.c  nvs_store.cpp  nvs_store.h  score_board.cpp  score_board.h  storage.cpp  storage.h  tasks.cpp  tasks.h
software/v3.0/main-unit/main/ble/: ab_shutter.cpp  ble.c  ble.cpp  ble.h  itag.c
software/v3.0/main-unit/main/button/: button.cpp  button.h  button_actions.cpp  button_actions.h  button_actions_helper.cpp  button_actions_helper.h
software/v3.0/main-unit/main/buzzer/: buzzer.cpp  buzzer.h
software/v3.0/main-unit/main/display/: display.cpp  display.h  display_api.cpp  display_api.h  display_definitions.cpp  display_definitions.h  display_helper.cpp  display_helper.h  display_init.cpp  display_init.h
software/v3.0/main-unit/main/i2c/: i2c_bus.cpp  i2c_bus.h  i2c_scan.cpp
software/v3.0/main-unit/main/power/: power.cpp  power.h
software/v3.0/main-unit/main/rtc/: ds3231.cpp  ds3231.h
software/v3.0/main-unit/main/settings/: settings.cpp
software/v3.0/main-unit/main/spi/: spi.cpp  spi.h
software/v3.0/main-unit/main/time/: app_time.cpp  app_time.h
software/v3.0/main-unit/main/wifi/: esp-now.cpp  esp-now.h  mirror_actions.cpp  mirror_actions.h
software/v3.0/testy/main/: CMakeLists.txt  definitions.cpp  definitions.h  main.cpp  misc.cpp  misc.h  nvs_store.h  score_board.cpp  tasks.cpp  tasks.h
software/v3.0/testy/main/ble/: ab_shutter.h  ble.c
software/v3.0/testy/main/button/: button.cpp  button.h  button_actions.cpp  button_actions_helper.cpp
software/v3.0/testy/main/buzzer/: buzzer.cpp  buzzer.h
software/v3.0/testy/main/display/: display.cpp  display.h  display_api.cpp  display_api.h  display_definitions.h  display_init.cpp  display_init.h
software/v3.0/testy/main/power/: power.cpp  power.h
software/v3.0/testy/main/rtc/: ds3231.h
software/v3.0/testy/main/spi/: spi.cpp  spi.h
software/v3.0/testy/main/time/: time.cpp  time.h
software/v3.0/testy/main/wifi/: esp-now.h
software/web/: CMakeLists.txt  index.html
software/web/display/: export_build_mac.sh  index.html  package.json
software/web/display/src/: button_actions_helper.cpp  button_actions_helper.h  definitions.cpp  misc.h  score_board.cpp
software/web/display/src/buzzer/: buzzer.cpp
software/web/display/src/display/: display.h  display_api.h  display_init.h
software/web/display/src/wifi/: esp-now.h
software/web/src/: button_actions.cpp  button_actions.h  button_actions_helper.cpp  definitions.h  main.cpp  score_board.h
software/web/src/display/: display.cpp  display.h  display_api.cpp  display_api.h  display_definitions.h  display_init.cpp
software/web/src/display/tlc5940/: tlc5940.cpp  tlc5940.h
software/web/web app/: package-lock.json  package.json
software/web/web app/src/: App.vue  style.css
software/web/web sim/: CMakeLists.txt  build.sh  package-lock.json
software/web/web sim 2/: .clang-format  CMakeLists.txt  build.sh  export_build_mac.sh  run.sh
software/web/web sim 2/src/: definitions.cpp  definitions.h  esp_log.h  main.cpp  misc.cpp  misc.h  score_board.cpp  score_board.h  storage.h  tasks.h
software/web/web sim 2/src/button/: button.h  (+4 more)
software/web/web sim/src/: button_actions_helper.cpp  button_actions_helper.h  definitions.cpp  definitions.h  misc.cpp
(+313 files in other folders)
