idf_component_register(
    SRCS 
        "main.cpp"
        "button/button.cpp"
        "button/button_actions.cpp"
        "button/button_actions_helper.cpp"
        "buzzer/buzzer.cpp"
        "display/display_definitions.cpp"
        "display/display_api.cpp"
        "display/display_init.cpp"
        "display/display.cpp"
        "display/tlc5951/tlc5951.cpp"
        "spi/spi.cpp"
        "wifi/esp-now.cpp"
        "ble/ble.c"
        "ble/ab_shutter.c"
        "ble/itag.c"
        "misc.cpp"
        "score_board.cpp"
        "tasks.cpp"
        "definitions.cpp"
        "storage.cpp"
        "nvs_store.c"
        "i2c/i2c_bus.cpp"
        "power/power.cpp"
        "rtc/ds3231.cpp"
    INCLUDE_DIRS "."
    REQUIRES 
        nvs_flash 
        esp_event 
        esp_netif 
        esp_wifi
        driver
        esp_timer
        esp_adc
        esp_hid
        bt
)